# policyengine-taxsim

./: .gitignore  LICENSE  README.md  TaxsimInputReader.py  input_mapper.py  pyproject.toml  requirements.txt  run-project.ipynb  saved_tests.pickle  struct  taxsim_emulator.py  taxsim_input.raw  tests.py
.github/workflows/: ci.yaml  ci.yml
LLMscraper/: LLMAccessor.py
output/: policyengine_taxsim_household_with_dependent_output.csv  policyengine_taxsim_household_with_dependent_single_parent_output.csv  policyengine_taxsim_joint_household_output.csv  policyengine_taxsim_output.csv  policyengine_taxsim_single_household_output.csv  taxsim35_output.csv
policyengine_taxsim/: __init__.py  cli.py  exe.py  policyengine_taxsim.spec
policyengine_taxsim/config/: variable_mappings.yaml
policyengine_taxsim/core/: input_mapper.py  output_mapper.py  utils.py
resources/taxsim35/: input-all-states-married.csv  input-all-states-single.csv  taxsim_input.csv  taxsim_input_joint_household.csv  taxsim_input_single_household.csv  taxsim_input_with_1_dep.csv  taxsim_input_with_1_dep_single_parent.csv
taxsim/: __init__.py  input_mapper.py  output_mapper.py
tests/: e2e_test.py  test_e2e.py  test_mappers.py  tests.py
