[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "policyengine-taxsim"
version = "0.1.0"
description = "A TAXSIM emulator using PolicyEngine US"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Al Noman", email = "al@policyengine.org"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "policyengine-us",
    "pandas",
    "PyYAML",
    "click",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/PolicyEngine/policyengine-taxsim"
"Bug Tracker" = "https://github.com/PolicyEngine/policyengine-taxsim/issues"

[project.scripts]
policyengine-taxsim = "policyengine_taxsim.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["policyengine_taxsim"]

[tool.hatch.build.targets.wheel.shared-data]
"resources/taxsim35" = "share/policyengine_taxsim/taxsim35"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
]
[tool.hatch.envs.default.scripts]
test = "pytest tests/ {args}"
test-cov = "pytest tests/ --cov-report=term-missing --cov-config=pyproject.toml --cov=policyengine_taxsim {args}"
cov-report = ["- coverage combine", "coverage report"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "policyengine_taxsim/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]